Create a table to store the input data

--- a/The Document Object Model/src/style.css
+++ b/The Document Object Model/src/style.css
@@ -13,3 +13,13 @@
     flex-direction: column;
  
 }
+
+table{
+    border-collapse: collapse;
+}
+td{
+    width: 200px;
+    height: 100px;
+    line-height: 30px;
+    border: 1px solid black;
+}
