--- a/The Document Object Model/src/style.css
+++ b/The Document Object Model/src/style.css
@@ -1,23 +1,61 @@
-* {
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f8f8f8;
     margin: 0;
     padding: 0;
-
-}
-.form-container{
-  
-    justify-content: center;
-    align-items: center;
-}
-.form-container form{
-   display: flex;
-    flex-direction: column;
- 
 }
 
-table{
+.form-container {
+    max-width: 1000px;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 5px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+form {
+    display: grid;
+    gap: 3px;
+}
+
+label {
+    margin-bottom: 2px;
+}
+
+/* input[type="text"],
+select {
+    width: calc(100% - 10px);
+    padding: 6px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-top: 3px;
+} */
+
+button {
+    background-color: #4caf50;
+    color: #fff;
+    padding: 5px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+.swaplist-container {
+    margin-top: 10px;
+    /* Decreased margin */
+}
+
+table {
     border-collapse: collapse;
 }
-td{
+
+td {
     width: 200px;
     height: 100px;
     line-height: 30px;
