--- a/The Document Object Model/src/style.css
+++ b/The Document Object Model/src/style.css
@@ -14,50 +14,14 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/* form {
-    display: grid;
-    gap: 3px;
-} */
 
-/* label {
-    margin-bottom: 2px;
-} */
+.swaplist-container{
+    max-width: 2000px;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 5px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
-/* input[type="text"],
-select {
-    width: calc(100% - 10px);
-    padding: 6px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-top: 3px;
-} */
-
-/* button {
-    background-color: #4caf50;
-    color: #fff;
-    padding: 5px 12px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
 }
 
-button:hover {
-    background-color: #45a049;
-}
-
-.swaplist-container {
-    margin-top: 10px;
-    
-}
-
-table {
-    border-collapse: collapse;
-}
-
-td {
-    width: 200px;
-    height: 100px;
-    line-height: 30px;
-    border: 1px solid black;
-}  */
