--- a/SBA_308A_JS_Web_APP/style.css
+++ b/SBA_308A_JS_Web_APP/style.css
@@ -1,4 +1,18 @@
+
 img{
-width: 200px;
-height: 200px;
+    width: 500px;
+    height: auto;
 }
+
+button.addToFav {
+    background-color: #4CAF50; 
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
