--- a/SBA_308A_JS_Web_APP/style.css
+++ b/SBA_308A_JS_Web_APP/style.css
@@ -48,7 +48,8 @@ body {
     height: 300px;
 }
 
-.dog_cards_container , #dogImg-container{
+.dog_cards_container,
+#dogImg-container {
     display: flex;
     flex-wrap: wrap;
 }
@@ -94,7 +95,8 @@ nav a {
     margin-top: 20px;
 }
 
-.dog_cards_container ,#dogImg-container{
+.dog_cards_container,
+#dogImg-container {
     justify-content: center;
 }
 
@@ -103,11 +105,11 @@ nav a {
     display: flex;
     justify-content: center;
     margin: 60px;
-    
+
 
 }
 
-#dog_breed_select_btn{
+#dog_breed_select_btn {
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -129,15 +131,32 @@ nav a {
     border-radius: 5px;
     background-color: #fff;
     font-size: 16px;
-    appearance: none; /* Hide default dropdown arrow */
-  }
+    appearance: none;
+    /* Hide default dropdown arrow */
+}
 
-  #dog_breed_select option {
+#dog_breed_select option {
     background-color: #fff;
     color: #333;
-  }
-  
-  /* Style for hovered option */
-  #dog_breed_select option:hover {
+}
+
+/* Style for hovered option */
+#dog_breed_select option:hover {
     background-color: #f0f0f0;
-  }
+}
+
+
+/* Style for the loading indicator */
+#loading-indicator {
+    display: none;
+    position: absolute; /* Position the loading indicator relative to its closest positioned ancestor */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    z-index: 1000;
+}
+
+#random_img_container {
+    position: relative; /* Ensure the loading indicator is positioned relative to this container */
+}
