added css simple css stylesheet

--- a/SBA_318_Express_Server_Application/views/userForm.ejs
+++ b/SBA_318_Express_Server_Application/views/userForm.ejs
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style/style.css">
+
     <title>User Form</title>
+    
 </head>
 
 <body>
@@ -18,8 +21,6 @@
 
         <button type="submit">Create User</button>
     </form>
-
-    <!-- Display area for feedback -->
     <div id="feedback"></div>
 
     <script>
