--- a/SBA_318_Express_Server_Application/views/userInfo.ejs
+++ b/SBA_318_Express_Server_Application/views/userInfo.ejs
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style/style.css">
+
     <title>User Info</title>
 </head>
 <body>
@@ -26,8 +28,5 @@
        
     <% }); %>
 
-    <script>
-        
-    </script>
 </body>
 </html>
